tests/paczka1/fuzzy1/93290697.err
Error in line 1: coNqP A198 58,4
Error in line 19: GAUhj A871 74,3
Error in line 13: coNqP A823 31,8
Error in line 21: xC6sS22a1tL A198 82,1
Error in line 22: coNqP A198 3,6
Error in line 30: xC6sS22a1tL A823 32,0
Error in line 36: S464 S464 20,92
Error in line 31: coNqP A823 72,2
